fixed problem with horizontal scroll in website

--- a/musikpr/musikpr.css
+++ b/musikpr/musikpr.css
@@ -13,13 +13,12 @@ html{
 	width:100%;
 	height:100%;
 	/*100% for html to cover the entire page for box-shadow*/
-	padding:20px;
 	font-family:"Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, sans-serif;
 }
 
 body{
-	margin: 0 auto;
-	padding:3px;
+	margin:0 auto;
+	padding:20px;
 	max-width: 1100px;
 	display: block;
 	font-family: "MavenPro Regular";
@@ -78,6 +77,7 @@ ul.startMenu{
 ul.startMenu li.sM_Link{
 	display:inline-block;
 	background:#8BF;
+	transition: ease-in-out background 300ms;
 	z-index:2;
 	padding:10px;
 	margin:0 2px 0 2px;
@@ -94,6 +94,7 @@ ul.startMenu li.sM_selectedLink{
 	margin: 0 2px 0 2px;
 }
 ul.startMenu li.sM_Link:hover{
+	transition:ease-out background 100ms;
 background:#CDF;
 }
 ul.startMenu li.sM_Link:active{
@@ -114,7 +115,7 @@ ul.startMenu li.sM_selectedLink a{
 }
 h2{margin:5px;padding:10px;font-size:30px;border-bottom:solid 1px rgba(0,0,0,0.3);}
 .pageContent p{
-	margin:10px;
+	margin:15px 10px;
 }
 abbr{
 	border:solid 1px rgba(0,0,0,0.1);
